# waynon

./: .gitignore  LICENSE.md  README.md  default.json  imgui.ini  pyproject.toml  settings.json
assets/images/: waynon_aruco_initialization.webm  waynon_camera_guess.webm  waynon_factorgraph.webm  waynon_moving.webm  waynon_moving_2.webm  waynon_scenegraph.webm
scripts/: test_factor.py  test_pinocchio.py
src/waynon/: main.py
src/waynon/components/: aruco_detector.py  aruco_marker.py  aruco_measurement.py  camera.py  collector.py  component.py  entities.py  factor_graph.py  image_measurement.py  joint_measurement.py  marker.py  measurement.py  node.py  optimizable.py  pose_group.py  raw_measurement.py  realsense_camera.py  renderable.py  robot.py  scene_utils.py  simple.py  transform.py  tree_utils.py
src/waynon/detectors/: aruco_processor.py  detector.py  measurement_processor.py
src/waynon/entities/: camera.py
src/waynon/panda/: desk.py
src/waynon/processors/: camera.py  collector.py  realsense_manager.py  render.py  robot.py  robot_processor.py  transforms.py
src/waynon/pyglet/: model.py
src/waynon/realsense/: multi_realsense.py  recorder.py  single_realsense.py
src/waynon/solvers/: factor_graph.py
src/waynon/utils/: aruco_textures.py  draw_utils.py  utils.py
src/waynon/viewmodels/: property_viewer.py  scene_viewmodel.py  viewer_2d_viewmodel.py  viewer_3d_viewmodel.py
