[project]
name = "waynon"
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.10, <3.11"
authors =[
    { name="Jad Abou-Chakra", email = "jchakra@theaiinstitute.com"}
]

dependencies = [
    "numpy", 
    "scipy", 
    "torch", 
    "trio", 
    "tyro",
    "esper",
    "opencv-python",
    "pydantic",
    "anytree",
    "pillow",
    "symforce",

    "trio-websocket@git+https://github.com/jc211/trio-websocket",
    "marsoom @ git+https://github.com/jc211/marsoom#f2258e7bf359da117928006881b38740dd3c331e", 
    "panda-python@git+https://github.com/jc211/panda-py#61c04aa1a18ca2491502ed9cc9b2c4bd8a3d4b4a",
    "panda_desk@git+https://github.com/jc211/panda_desk.git#9c2271ee4d2f707fb4e2151d3ccdabbcb045a446",
    "realsense@git+https://github.com/jc211/realsense.git#329f655fca883d6ccd61e81044d9365e08490bd1",
    ]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pixi.project]
channels = ["jc211", "conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
waynon = { path = ".", editable = true }

[tool.pixi.tasks]
start = { cmd = "python src/waynon/main.py" }

[tool.pixi.dependencies]
eigen = "*"
libfranka = "*"
pinocchio = "*"
pyrealsense2 = "*"
pip = "*"
ruckig = {version = "*", channel="jc211"}